src/composites/TreeDisplay/nodeDescriptionPanel/NodeDescriptionPanel.css
#node_description_panel {
  background-color: ivory;
  border: gray solid 3px;
  width: 35vw;
}

.node-panel,
.node-bottom-panel {
  font-size: 0.8vw;
  background-color: transparent;
  border-bottom: 2px solid gray;
}

.node-name {
  border-bottom: gray dashed 1px;
  font-size: 1vw;
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 25%;
}

.node-info {
  overflow-y: auto;
  height: 75%;
}

.scrollable-panel {
  overflow-y: auto;
  max-height: 100vh;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: translateX(0);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.highlight {
  animation: fadeIn 1.25s ease-in-out;
}

.external-link-icon {
  display: none;
  height: 10px;
  width: 10px;
  color: gray;
}

.info-block:hover .external-link-icon {
  display: inline-block;
}

